syntax = "proto3";

package types.v1beta1;

option go_package = "/proto";

import "google/protobuf/timestamp.proto";

message Secret {
  int64 secretid = 1;
  int64 uuid = 2;
  string key = 3;
  string secret = 4;
  bool expired = 5;
  google.protobuf.Timestamp created_at = 6;
}